# zulip_rs

./: Cargo.toml  rustfmt.toml
clap-repl/: Cargo.toml
clap-repl/src/: lib.rs
common-cache/: Cargo.toml
common-cache/src/: lib.rs
examples/: zulip_cli.rs
src/: client.rs  lib.rs  message.rs  rc.rs  stream.rs
src/message/: narrow.pest  narrow.rs
zcli/: Cargo.toml
zcli/src/: lib.rs  main.rs
zulib/: Cargo.toml  README.md
zulib/src/: client.rs  lib.rs  message.rs  raw_client.rs  rc.pest  rc.rs  stream.rs
zulib/src/message/: narrow.rs
