[package]
name = "zulip"
version = "0.2.0"
authors = ["nukr <nukrs.w@gmail.com>"]
edition = "2018"
description = "Rust library to access the Zulip API"
license = "MIT"
repository = "https://github.com/nukr/zulip_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"], default-features = false }
log = "0.4"
pest = "2.1"
pest_derive = "2.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1"
serde_qs = "0.8"
snailquote = "0.3.1"
thiserror = "1.0.37"

[dev-dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
clap = { version = "4.0.32", features = ["derive"] }
dirs = "4.0.0"
flexi_logger = "0.24.2"
httpmock = "0.5.8"
indoc = "1.0.7"
tokio = { version = "1", features = [ "full" ] }

[patch.crates-io]
serde = { git = "https://github.com/tage64/serde" }

[[example]]
name = "zulip_cli"
