[package]
name = "zcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { workspace = true, features = ["derive"] }
dirs = "4.0.0"
flexi_logger = "0.24.2"
tokio = { version = "1.23.0", features = ["rt", "macros", "rt-multi-thread"], default-features = false }
zulib = { version = "0.2.0", path = "../zulib" }
