[package]
name = "zcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono-humanize = "0.2.2"
clap = { workspace = true, features = ["derive"] }
clap-repl = { version = "0.1.0", path = "../clap-repl" }
common-cache = { version = "0.1.0", path = "../common-cache" }
derive_more = "0.99.17"
dirs = "4.0.0"
flexi_logger = "0.24.2"
iter_tools = "0.1.4"
regex = "1.7.0"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
tokio = { version = "1.23.0", features = ["rt", "macros", "rt-multi-thread"], default-features = false }
zulib = { version = "0.2.0", path = "../zulib" }
